fix - drop down elements in dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -53,6 +53,7 @@ select {
   width: 100%;
   border-radius: 8px;
   font: inherit;
+  z-index: 0;
 }
 
 .weather-marker {
